--- a/src/Components/LineProfiles/StraightLineProfile/StraightLineProfile.module.css
+++ b/src/Components/LineProfiles/StraightLineProfile/StraightLineProfile.module.css
@@ -19,7 +19,7 @@
     width: 4.8vw;
     max-width: 65px;
     min-width: 48px;
-    border-right: 2px solid rgba(0, 0, 0, 0.3);
+    /*border-right: 2px solid rgba(0, 0, 0, 0.3);*/
     margin-bottom: 3px;
 }
 
@@ -41,6 +41,7 @@
 .rightSide {
     width: 25vw;
     justify-content: left;
+    border-left: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 .topSection {
